  time Score-P starts clock synchronization. The synchronization callback
  contains one argument specifying the point in time in more detail. At
  the moment we distinguish synchronization at initialization, during
  measurement run, and at finalization. As a result the synchronization
  callback allows metric plugins to detect start and end points of
  measurement intervals.

User tools and API improvements and changes:

- A Score-P installation provides new instrumentation wrappers which
  simplify the application instrumentation of autotools and CMake based
  projects.  Please consult the usage instruction of the 'scorep-wrapper'
  command.
- The option --pomp does not take any options any more.
- Specific options for OPARI2 are passed via the
  --opari=<parameter-list> option.
- To enable or disable instrumentation of OpenMP the options
  --openmp and --noopenmp have been added. Note that for compile
  units with enabled OpenMP compilerflag, instrumentation is
  enabled by default. However, when manually disabling, some
  instrumentation must still be carried out to ensure a
  thread-safe execution of the measurement system.
- POMP user instrumentation is no longer automatically activated
  together with OpenMP instrumentation. The --pomp flag has to be
  explicitly specified with the scorep command.
- On Cray systems, compiler instrumentation does not add '-G2' option
  anymore, which disables some optimizations.
- The instrumenter now warns the user if the provided instrumentation
  filter wont be used by the active instrumentations.

Bugfixes:

- Fixed a possible segementation fault in the user adapter.
- Fixed an unitialized variable in the instrumenter.
- Fixed possible mistreatment of a profile node as being in an untied
  task.
- Fixed bug in obtaining executable names longer than 512 characters
  when using the GNU compiler adapter (applies also to Cray and
  Fujitsu compilers).
- The GCC compiler instrumentation plug-in was non-functional for GCC 5