@@ -64,6 +64,9 @@ Features and improvements:
   measurement run, and at finalization. As a result the synchronization
   callback allows metric plugins to detect start and end points of
   measurement intervals.
+- The manual user instrumentation for Fortran 90 performs region
+  initialization checks based on handle values instead of comparing names.
+  This does not apply when using PGI compilers.
 
 User tools and API improvements and changes:
 
